@@ -89,13 +89,17 @@ if ! ${update} ; then
 	fi
 
 	touch "${mtime_test}"
-	for config in /etc/conf.d /etc/init.d /etc/rc.conf
+	for config in /etc/conf.d/* /etc/init.d/* /etc/rc.conf
 	do
 		! ${update} \
 			&& is_older_than "${mysvcdir}/depcache" "${config}" \
 			&& update=true
 		
-		is_older_than "${mtime_test}" "${config}" && clock_screw=1
+		if is_older_than "${mtime_test}" "${config}" ; then
+			# Update the file modification time
+			touch "${config}" &>/dev/null
+			clock_screw=1
+		fi
 	done
 	rm -f "${mtime_test}"
 
